<resources>
    <string name="app_name">HHApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="entry_to_personal_account">Вход в личный кабинет</string>
    <string name="search_work">Поиск работы</string>
    <string name="continue_btn">Продолжить</string>
    <string name="continue_with_password">Войти с паролем</string>
    <string name="search_employees">Поиск сотрудников</string>
    <string name="email">Email</string>
    <string name="sent_code_to_email">Отправили код на</string>
    <string name="description_code">Напишите его, чтобы подтвердить, что это вы,а не кто-то другой входит в личный кабинет</string>
    <string name="description">Размещение ваканский и доступ к базе резюме</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="position_keywords">Должность, ключевые слова</string>
    <string name="jobs_for_you">Вакансии для вас</string>
    <string name="currently_n_people_are_viewing">Сейчас просматриваию %d человек</string>
    <string name="vacancy_label">UX|UI дизайнер</string>
    <string name="city">Минск</string>
    <string name="company">Компания</string>
    <string name="experience">Опыт работы</string>
    <string name="publication_date">Опубликовано %s</string>
    <string name="approuve">Подтвердить</string>
    <string name="jobs_near_you">Вакансии рядом с вами</string>
    <string name="raise">Поднять</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="messages">Сообщения</string>
    <string name="feedbacks">Отклики</string>
    <string name="favorite">Избранное</string>
    <!--    <string name="more_n_vacancies">Еще %d ваканский</string>-->
    <plurals name="more_n_vacancies">
        <item quantity="one">Еще %d вакансия</item>
        <item quantity="few">Еще %d вакансии</item>
        <item quantity="many">Еще %d вакансий</item>
        <item quantity="other">Еще %d вакансий</item>
    </plurals>

    <string name="respond">Откликнуться</string>
    <string name="by_correspondence">По соответствию</string>
    <string name="address">Адрес</string>
    <string name="your_responsibilities">Ваши задачи</string>
    <string name="ask_the_employer_questions">Задайте вопросы работадателю</string>
    <string name="employer_get_vacancy">Он получит его с откликом на вакансию</string>
    <string name="people_have_already_responded">%d человек уже откликнулись</string>
    <string name="the_person_is_being_watched_right_now">%d человека смотрят прямо сейчас</string>
    <string name="add_later">Добавить сопроводительное</string>
    <string name="enter_later">Введите сопроводительное сообщение</string>
    <!--    <string name="counter_vacancy">%d Ваканский</string>-->
    <plurals name="counter_vacancy">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>

</resources>