<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/container_view_padding_16dp"
    tools:context=".auth.EntryCodeFragment">

    <TextView
        android:id="@+id/sender_code_to_email_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sent_code_to_email"
        android:textSize="@dimen/title_2_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description_code"
        android:textSize="@dimen/title_3_size_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sender_code_to_email_label" />

    <LinearLayout
        android:id="@+id/code_input_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_label">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_text_field"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="@dimen/title_3_size_16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_text_field"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="@dimen/title_3_size_16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_text_field"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="@dimen/title_3_size_16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/code_edit_text_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/rounded_text_field"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:textSize="@dimen/title_3_size_16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/approuve"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_input_container"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>